hw-03/hw-03-01/Pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx-server
  name: nginx-server
  namespace: default
spec:
  restartPolicy: Never
  hostAliases:
  - ip: "127.0.0.1"
    hostnames:
    - "cristian.student.lasalle.com"
  containers:
  - image: nginx:1.19.4
    imagePullPolicy: Always
    name: nginx
    resources:
        limits:
            cpu: 100m
            memory: 256Mi
        requests: 
             cpu: 100m
             memory: 256Mi
