hw-03/hw-03-01/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx-server
spec:
  selector:
    matchLabels:
      run: nginx
  replicas: 3
  template:
    metadata:
      labels:
        run: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.4
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 20m
            memory: "128Mi"
          requests:
            cpu: 20m
            memory: "128Mi"
            
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-server-service
spec:
  type: NodePort
  ports:
    - name: http
      targetPort: 80
      port: 80
      nodePort: 31717
