hw-03/hw-03-01/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-server-service
spec:
  type: NodePort
  selector:
  app: nginx-server
  ports:
  - port: 80
    targetPort: 80
